--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -28,29 +28,29 @@
 		</div>
 	</div> -->
 <div class="limiter">
-		<div class="container-login100">
-			<div class="wrap-login100">
-				<ng4-loading-spinner> </ng4-loading-spinner>
-				<simple-notifications></simple-notifications>
-				<hr>
-				<form (ngSubmit)="submitLogin()" class="login-form">
-					<span>
-						<h2>{{_constant.login_heading_label}}</h2>
-					</span>
-					<div class="form-group">
-						<input class="input100" [ngClass]="(!checkInput('email',this.modeluser.email) && this.modeluser.email!='') ? 'input-invalid' : '' " type="text" required = "true" (keyup)="checkInput('email',this.modeluser.email)" [(ngModel)]="this.modeluser.email" name="email" placeholder="{{_constant.placeholder_email}}">
-					</div>
-					<div class="form-group">
-						<input class="input100"  [ngClass]="(!checkInput('password',this.modeluser.password)) ? 'input-invalid' : '' " type="password" required = "true" (keyup)="checkInput('password', this.modeluser.password)" [(ngModel)]="this.modeluser.password" name="password" placeholder="{{_constant.placeholder_password}}">
-					</div>
-					<!-- {{this.modeluser | json}}
-					@{{ validLogin | json}} -->
-					<div class="center ">
-						<button class="btn btn-primary button-area" [disabled]="!validationErrorShow">
-							{{_constant.login_heading_label}} &gt;&gt;
-						</button>
-					</div>
-				</form>
-			</div>
+	<div class="container-login100">
+		<div class="wrap-login100">
+			<ng4-loading-spinner> </ng4-loading-spinner>
+			<simple-notifications></simple-notifications>
+			<hr>
+			<form (ngSubmit)="submitLogin()" class="login-form">
+				<span>
+					<h2>{{_constant.login_heading_label}}</h2>
+				</span>
+				<div class="form-group">
+					<input class="input100" [ngClass]="(!checkInput('email',this.modeluser.email) ) ? 'input-invalid1' : '' " type="text" required = "true" (keyup)="checkInput('email',this.modeluser.email)" [(ngModel)]="this.modeluser.email" name="email" placeholder="{{_constant.placeholder_email}}">
+				</div>
+				<div class="form-group">
+					<input class="input100"  [ngClass]="(!checkInput('password',this.modeluser.password)) ? 'input-invalid1' : '' " type="password" required = "true" (keyup)="checkInput('password', this.modeluser.password)" [(ngModel)]="this.modeluser.password" name="password" placeholder="{{_constant.placeholder_password}}">
+				</div>
+				<!-- {{this.modeluser | json}}
+				@{{ validLogin | json}} -->
+				<div class="center ">
+					<button class="btn btn-primary button-area" [disabled]="!validationErrorShow">
+						{{_constant.login_heading_label}} &gt;&gt;
+					</button>
+				</div>
+			</form>
 		</div>
 	</div>
+</div>
