--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     
     <div class="copyright float-right">
-      &copy;2018-2019 Reserved
+      &copy;{{_constant.adminCopyrightText}}
       <script>
         document.write(new Date().getFullYear())
       </script> 
