--- a/src/app/users/user-edit/user-edit.component.html
+++ b/src/app/users/user-edit/user-edit.component.html
@@ -12,8 +12,8 @@
     <div class="col-md-12">
       <div class="card">
         <div class="card-header card-header-primary">
-          <h4 class="card-title">User Management</h4>
-          <p class="card-category">Add</p>
+          <h4 class="card-title">{{_constant.user_management_heading}}</h4>
+          <p class="card-category">{{_constant.editLabel}}</p>
         </div>
         <div class="card-body">
           <simple-notifications></simple-notifications>
